# AlgoLearnCollection

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp
algorithms/tests/: basic_test.cpp
datastructures/: ringbuffer.hpp  toImplement.md
datastructures/ringbuffer/: IRingBuffer.hpp  NoParallelRingBuffer.cpp  NoParallelRingBuffer.hpp  ringbuffer.hpp
datastructures/tests/: NoParallelRingBuffer_test.cpp  RingBuffer_test.cpp  ringbuffer_test.cpp
excercises/: third.cpp
miniprojects/avito-backend/: CMakeLists.txt
miniprojects/backend-userver/: CMakeLists.txt  Dockerfile  README.md
miniprojects/backend-userver/app/: CMakeLists.txt
miniprojects/one-more-raylib-proj/: CMakeLists.txt  main.cpp
miniprojects/simple-raylib/: CMakeLists.txt  conanfile.txt  main.cpp
miniprojects/simple-raylib-fetchContent/sources/: World.cpp
miniprojects/simple-raylib/sources/: Simulation.cpp  Simulation.h  World.h
miniprojects/tguserbot/cppTDLib/: CMakeLists.txt
miniprojects/tguserbot/verysimpleone/: Notes.md  userbot.py
misc/: perfanal.hpp  reflexivestructs.hpp  task.h
